<resources>
    <string name="app_name">SocialAuth</string>
    <string name="twitter">Twitter</string>
    <string name="insta">Instagram</string>
    <string name="dropbox">DropBox</string>
    <string name="facebook">Facebook</string>
    <string name="btn_Post">Post On Twitter</string>
<!--dropbox-->
    <string name="done">Done</string>
    <string name="drop_box">DropBox</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="download">Download</string>
    <string-array name="filters_upload">
        <item>Take Photo</item>
        <item>Take Video</item>
    </string-array>
<!--facebook-->
    <string name="app_id">Your app_id</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="share_on_facebook">Share On Facebook</string>
    <string name="get_user_info">Get User Information</string>
    <string name="user_friend_list">Get Facebook Friend</string>
    <string name="friends">Friends</string>
    <string name="user_information">User Information</string>
    <string name="userid_">UserId :</string>
    <string name="user_name_">User Name :</string>
    <string name="first_name_">First Name :</string>
    <string name="last_name_">Last NAme :</string>
    <string name="birthday_">Birthday :</string>
    <string name="emailid_">EmailId :</string>
    <string name="facebookdemo">Facebook</string>


</resources>
